Add auxiliary styling structure, add test photos

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="img/logo.png" alt="Logo" class="header__logo">
+        <img src="images/logo.png" alt="Logo" class="header__logo">
         <form class="search">
           <input type="text" class="search__field" placeholder="Search over thousands of recipes...">
           <button class="btn search__btn">
             <svg class="search__icon">
-              <use href="img/icons.svg#icon-magnifying-glass"></use>
+              <use href="images/icons.svg#icon-magnifying-glass"></use>
             </svg>
             <span>Search</span>
           </button>
@@ -27,12 +27,22 @@
         <div class="likes">
           <div class="likes__field">
             <svg class="likes__icon">
-              <use href="img/icons.svg#icon-heart"></use>
+              <use href="images/icons.svg#icon-heart"></use>
             </svg>
           </div>
           <div class="likes__panel">
             <ul class="likes__list">
-              
+              <li>
+                <a class="likes__link">
+                  <figure class="likes__fig">
+                    <img src="images/test-1.jpg" alt="Test">
+                  </figure>
+                  <div class="likes__data">
+                    <h4 class="likes__name">Pasta with Tomato ...</h4>
+                    <p class="likes__author">The Pioneer Woman</p>
+                  </div>
+                </a>
+              </li>              
             </ul>
           </div>
         </div>
@@ -40,7 +50,116 @@
 
       <div class="results">
         <ul class="results__list">
-          
+          <li>
+            <a class="results__link results__link--active">
+              <figure class="results__fig">
+                <img src="../src/images/test-1.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Pasta with Tomato ...</h4>
+                <p class="results__author">The Pioneer Woman</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-2.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Pasta Salad with ...</h4>
+                <p class="results__author">Spicy Perspective</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-3.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Homemade Tomato ...</h4>
+                <p class="results__author">All Recipes</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-4.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Pasta with Tomato ...</h4>
+                <p class="results__author">The Pioneer Woman</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-5.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Greek Pasta with ...</h4>
+                <p class="results__author">Chow</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-9.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Cherry tomato, kale ...</h4>
+                <p class="results__author">BBC Good Food</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-7.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Pasta with Fresh ...</h4>
+                <p class="results__author">Chow</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-8.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Buttery Tomato Pasta ...</h4>
+                <p class="results__author">Simply Recipes</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-10.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Pesto Pasta Salad ...</h4>
+                <p class="results__author">Eats Well With Others</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="results__link">
+              <figure class="results__fig">
+                <img src="../src/images/test-3.jpg" alt="Test">
+              </figure>
+              <div class="results__data">
+                <h4 class="results__name">Pasta with Roasted ...</h4>
+                <p class="results__author">Two Peas and Their Pod</p>
+              </div>
+            </a>
+          </li>          
         </ul>
 
         <div class="results__pages">
