--- a/src/index.html
+++ b/src/index.html
@@ -307,14 +307,84 @@
         <h2 class="heading-2">Shopping List</h2>
 
         <ul class="shopping__list">
-
+          <li class="shopping__item">
+            <div class="shopping__count">
+              <input type="number" value="500" step="100">
+              <p>g</p>
+            </div>
+            <p class="shopping__description">Pasta</p>
+            <button class="shopping__delete btn-tiny">
+              <svg>
+                <use href="img/icons.svg#icon-circle-with-cross"></use>
+              </svg>
+            </button>
+          </li>
+          <li class="shopping__item">
+            <div class="shopping__count">
+              <input type="number" value="0.5" step="0.1">
+              <p>cup</p>
+            </div>
+            <p class="shopping__description">Ricotta cheese</p>
+            <button class="shopping__delete btn-tiny">
+              <svg>
+                <use href="img/icons.svg#icon-circle-with-cross"></use>
+              </svg>
+            </button>
+          </li>
+          <li class="shopping__item">
+            <div class="shopping__count">
+              <input type="number" value="3.5" step="0.1">
+              <p>tbsp</p>
+            </div>
+            <p class="shopping__description">Toasted almond slices</p>
+            <button class="shopping__delete btn-tiny">
+              <svg>
+                <use href="img/icons.svg#icon-circle-with-cross"></use>
+              </svg>
+            </button>
+          </li>
+          <li class="shopping__item">
+            <div class="shopping__count">
+              <input type="number" value="0.5" step="0.1">
+              <p>tbsp</p>
+            </div>
+            <p class="shopping__description">Sea salt</p>
+            <button class="shopping__delete btn-tiny">
+              <svg>
+                <use href="img/icons.svg#icon-circle-with-cross"></use>
+              </svg>
+            </button>
+          </li>
+          <li class="shopping__item">
+            <div class="shopping__count">
+              <input type="number" value="0.25" step="0.1">
+              <p>cup</p>
+            </div>
+            <p class="shopping__description">Minced green onions</p>
+            <button class="shopping__delete btn-tiny">
+              <svg>
+                <use href="img/icons.svg#icon-circle-with-cross"></use>
+              </svg>
+            </button>
+          </li>
+          <li class="shopping__item">
+            <div class="shopping__count">
+              <input type="number" value="45" step="10">
+              <p>g</p>
+            </div>
+            <p class="shopping__description">Sesame seeds</p>
+            <button class="shopping__delete btn-tiny">
+              <svg>
+                <use href="img/icons.svg#icon-circle-with-cross"></use>
+              </svg>
+            </button>
+          </li>
         </ul>
+      </div>
 
-        <div class="copyright">
-          Created with <i class="fas fa-heart love-heart"></i> by Łukasz Król &copy; 2020. Powered by
-          <a href="http://food2fork.com" target="_blank" class="link">Food2Fork.com</a>.
-        </div>
-
+      <div class="copyright">
+        Created with <i class="fas fa-heart love-heart"></i> by Łukasz Król &copy; 2020. Powered by
+        <a href="http://food2fork.com" target="_blank" class="link">Food2Fork.com</a>.
       </div>
     </div>
   </body>
