--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="images/logo.png" alt="Logo" class="header__logo">
+        <img src="" alt="Logo" class="header__logo">
         <form class="search">
           <input type="text" class="search__field" placeholder="Search over thousands of recipes...">
           <button class="btn search__btn">
@@ -165,22 +165,22 @@
         <div class="results__pages">
           <button class="btn-inline results__btn--prev">
             <svg class="search__icon">
-              <use href="img/icons.svg#icon-triangle-left"></use>
+              <use href="../src/images/icons.svg#icon-triangle-left"></use>
             </svg>
             <span>Page 1</span>
           </button>
           <button class="btn-inline results__btn--next">
-              <span>Page 3</span>
-              <svg class="search__icon">
-                <use href="img/icons.svg#icon-triangle-right"></use>
-              </svg>
+            <span>Page 3</span>
+            <svg class="search__icon">
+              <use href="../src/images/icons.svg#icon-triangle-right"></use>
+            </svg>
           </button>
         </div>
       </div>
 
       <div class="recipe">
         <figure class="recipe__fig">
-          <img src="img/test-1.jpg" alt="Tomato" class="recipe__img">
+          <img src="../src/images/test-1.jpg" alt="Tomato" class="recipe__img">
           <h1 class="recipe__title">
             <span>Pasta with tomato cream sauce</span>
           </h1>
@@ -188,33 +188,33 @@
         <div class="recipe__details">
           <div class="recipe__info">
             <svg class="recipe__info-icon">
-              <use href="img/icons.svg#icon-stopwatch"></use>
+              <use href="../src/images/icons.svg#icon-stopwatch"></use>
             </svg>
             <span class="recipe__info-data recipe__info-data--minutes">45</span>
             <span class="recipe__info-text"> minutes</span>
           </div>
           <div class="recipe__info">
             <svg class="recipe__info-icon">
-              <use href="img/icons.svg#icon-man"></use>
+              <use href="../src/images/icons.svg#icon-man"></use>
             </svg>
             <span class="recipe__info-data recipe__info-data--people">4</span>
             <span class="recipe__info-text"> servings</span>
             <div class="recipe__info-buttons">
               <button class="btn-tiny">
                 <svg>
-                  <use href="img/icons.svg#icon-circle-with-minus"></use>
+                  <use href="../src/images/icons.svg#icon-circle-with-minus"></use>
                 </svg>
               </button>
               <button class="btn-tiny">
                 <svg>
-                  <use href="img/icons.svg#icon-circle-with-plus"></use>
+                  <use href="../src/images/icons.svg#icon-circle-with-plus"></use>
                 </svg>
               </button>
             </div>
           </div>
           <button class="recipe__love">
             <svg class="header__likes">
-              <use href="img/icons.svg#icon-heart-outlined"></use>
+              <use href="../src/images/icons.svg#icon-heart-outlined"></use>
             </svg>
           </button>
         </div>
@@ -222,7 +222,7 @@
           <ul class="recipe__ingredient-list">
             <li class="recipe__item">
               <svg class="recipe__icon">
-                <use href="img/icons.svg#icon-check"></use>
+                <use href="../src/images/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__count">1000</div>
               <div class="recipe__ingredient">
@@ -232,7 +232,7 @@
             </li>
             <li class="recipe__item">
               <svg class="recipe__icon">
-                <use href="img/icons.svg#icon-check"></use>
+                <use href="../src/images/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__count">1/2</div>
               <div class="recipe__ingredient">
@@ -242,7 +242,7 @@
             </li>
             <li class="recipe__item">
               <svg class="recipe__icon">
-                <use href="img/icons.svg#icon-check"></use>
+                <use href="../src/images/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__count">1</div>
               <div class="recipe__ingredient">
@@ -252,7 +252,7 @@
             </li>
             <li class="recipe__item">
               <svg class="recipe__icon">
-                <use href="img/icons.svg#icon-check"></use>
+                <use href="../src/images/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__count">1</div>
               <div class="recipe__ingredient">
@@ -262,7 +262,7 @@
             </li>
             <li class="recipe__item">
               <svg class="recipe__icon">
-                <use href="img/icons.svg#icon-check"></use>
+                <use href="../src/images/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__count">1/2</div>
               <div class="recipe__ingredient">
@@ -272,7 +272,7 @@
             </li>
             <li class="recipe__item">
               <svg class="recipe__icon">
-                <use href="img/icons.svg#icon-check"></use>
+                <use href="../src/images/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__count">1/4</div>
               <div class="recipe__ingredient">
@@ -283,7 +283,7 @@
           </ul>
           <button class="btn-small recipe__btn">
             <svg class="search__icon">
-              <use href="img/icons.svg#icon-shopping-cart"></use>
+              <use href="../src/images/icons.svg#icon-shopping-cart"></use>
             </svg>
             <span>Add to shopping list</span>
           </button>
@@ -297,7 +297,7 @@
           <a class="btn-small recipe__btn" href="http://thepioneerwoman.com/cooking/pasta-with-tomato-cream-sauce/" target="_blank">
             <span>Directions</span>
             <svg class="search__icon">
-              <use href="img/icons.svg#icon-triangle-right"></use>
+              <use href="../src/images/icons.svg#icon-triangle-right"></use>
             </svg>
           </a>
         </div>
@@ -315,7 +315,7 @@
             <p class="shopping__description">Pasta</p>
             <button class="shopping__delete btn-tiny">
               <svg>
-                <use href="img/icons.svg#icon-circle-with-cross"></use>
+                <use href="../src/images/icons.svg#icon-circle-with-cross"></use>
               </svg>
             </button>
           </li>
@@ -327,7 +327,7 @@
             <p class="shopping__description">Ricotta cheese</p>
             <button class="shopping__delete btn-tiny">
               <svg>
-                <use href="img/icons.svg#icon-circle-with-cross"></use>
+                <use href="../src/images/icons.svg#icon-circle-with-cross"></use>
               </svg>
             </button>
           </li>
@@ -339,7 +339,7 @@
             <p class="shopping__description">Toasted almond slices</p>
             <button class="shopping__delete btn-tiny">
               <svg>
-                <use href="img/icons.svg#icon-circle-with-cross"></use>
+                <use href="../src/images/icons.svg#icon-circle-with-cross"></use>
               </svg>
             </button>
           </li>
@@ -351,7 +351,7 @@
             <p class="shopping__description">Sea salt</p>
             <button class="shopping__delete btn-tiny">
               <svg>
-                <use href="img/icons.svg#icon-circle-with-cross"></use>
+                <use href="../src/images/icons.svg#icon-circle-with-cross"></use>
               </svg>
             </button>
           </li>
@@ -363,7 +363,7 @@
             <p class="shopping__description">Minced green onions</p>
             <button class="shopping__delete btn-tiny">
               <svg>
-                <use href="img/icons.svg#icon-circle-with-cross"></use>
+                <use href="../src/images/icons.svg#icon-circle-with-cross"></use>
               </svg>
             </button>
           </li>
