--- a/src/index.html
+++ b/src/index.html
@@ -187,19 +187,19 @@
         </figure>
         <div class="recipe__details">
           <div class="recipe__info">
-            <svg class="recipe__info-icon">
+            <svg class="recipe__info--icon">
               <use href="../src/images/icons.svg#icon-stopwatch"></use>
             </svg>
-            <span class="recipe__info-data recipe__info-data--minutes">45</span>
+            <span class="recipe__info--data recipe__info--data--minutes">45</span>
             <span class="recipe__info-text"> minutes</span>
           </div>
           <div class="recipe__info">
-            <svg class="recipe__info-icon">
+            <svg class="recipe__info--icon">
               <use href="../src/images/icons.svg#icon-man"></use>
             </svg>
-            <span class="recipe__info-data recipe__info-data--people">4</span>
+            <span class="recipe__info--data recipe__info--data--people">4</span>
             <span class="recipe__info-text"> servings</span>
-            <div class="recipe__info-buttons">
+            <div class="recipe__info--buttons">
               <button class="btn-tiny">
                 <svg>
                   <use href="../src/images/icons.svg#icon-circle-with-minus"></use>
@@ -212,14 +212,15 @@
               </button>
             </div>
           </div>
-          <button class="recipe__love">
-            <svg class="header__likes">
-              <use href="../src/images/icons.svg#icon-heart-outlined"></use>
-            </svg>
+          <button class="recipe__love header__likes">
+            <!-- <div class="header__likes"> -->
+              <!-- <use href="../src/images/icons.svg#icon-heart-outlined"></use> -->
+              <i class="far fa-heart recipe__love--recipe"></i>
+            <!-- </div> -->
           </button>
         </div>
         <div class="recipe__ingredients">
-          <ul class="recipe__ingredient-list">
+          <ul class="recipe__ingredient--list">
             <li class="recipe__item">
               <svg class="recipe__icon">
                 <use href="../src/images/icons.svg#icon-check"></use>
@@ -290,7 +291,7 @@
         </div>
         <div class="recipe__directions">
           <h2 class="heading-2">How to cook it</h2>
-          <p class="recipe__directions-text">
+          <p class="recipe__directions--text">
             This recipe was carefully designed and tested by
             <span class="recipe__by">The Pioneer Woman</span>. Please check out directions at their website.
           </p>
