--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
       </div>
 
       <div class="recipe">
-        <figure class="recipe__fig">
+        <!-- <figure class="recipe__fig">
           <img src="../src/images/test-1.jpg" alt="Tomato" class="recipe__img">
           <h1 class="recipe__title">
             <span>Pasta with tomato cream sauce</span>
@@ -216,12 +216,12 @@
               </button>
             </div>
           </div>
-          <button class="recipe__love header__likes">
+          <button class="recipe__love header__likes"> -->
             <!-- <div class="header__likes"> -->
               <!-- <use href="../src/images/icons.svg#icon-heart-outlined"></use> -->
-              <i class="far fa-heart recipe__love--recipe"></i>
+              <!-- <i class="far fa-heart recipe__love--recipe"></i> -->
             <!-- </div> -->
-          </button>
+          <!-- </button>
         </div>
         <div class="recipe__ingredients">
           <ul class="recipe__ingredients--list">
@@ -305,7 +305,7 @@
               <use href="../src/images/icons.svg#icon-triangle-right"></use>
             </svg>
           </a>
-        </div>
+        </div> -->
       </div>
 
       <div class="shopping">
