Add shopping list controller

--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,7 @@
         <h2 class="heading-2">Shopping List</h2>
 
         <ul class="shopping__list">
-          <li class="shopping__item">
+          <!-- <li class="shopping__item">
             <div class="shopping__count">
               <input type="number" value="500" step="100">
               <p>g</p>
@@ -383,7 +383,7 @@
                 <use href="img/icons.svg#icon-circle-with-cross"></use>
               </svg>
             </button>
-          </li>
+          </li> -->
         </ul>
       </div>
 
