--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,13 @@
         </form>
         <div class="likes">
           <div class="likes__field">
-            <svg class="likes__icon">
-              <use href="images/icons.svg#icon-heart"></use>
-            </svg>
+            <div class="likes__icon">
+              <i class="fas fa-heart likes-heart"></i>
+            </div>
           </div>
           <div class="likes__panel">
             <ul class="likes__list">
-              <li>
+              <!-- <li>
                 <a class="likes__link">
                   <figure class="likes__fig">
                     <img src="images/test-1.jpg" alt="Test">
@@ -42,7 +42,7 @@
                     <p class="likes__author">The Pioneer Woman</p>
                   </div>
                 </a>
-              </li>              
+              </li>               -->
             </ul>
           </div>
         </div>
