--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
         <form class="search">
           <input type="text" class="search__field" placeholder="Search over thousands of recipes...">
           <button class="btn search__btn">
-            <svg class="search__icon">
-              <use href="images/icons.svg#icon-magnifying-glass"></use>
-            </svg>
+            <div class="search__icon">
+              <i class="fas fa-search"></i>
+            </div>
             <span>Search</span>
           </button>
         </form>
