Add styles for footer

--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,9 @@
         </ul>
       </div>
 
-      <div class="copyright">
-        Created with <i class="fas fa-heart love-heart"></i> by Łukasz Król &copy; 2020.
-      </div>
+    </div>
+    <div class="footer">
+      Created with <i class="fas fa-heart love-heart"></i> by Łukasz Król &copy; 2020.
     </div>
   </body>
 </html>
